--- a/wwwroot/scss/divider.scss
+++ b/wwwroot/scss/divider.scss
@@ -2,10 +2,6 @@
 
 .giz-divider {
     background: $onyx-black-theme-dark;
-
-    [light-theme] & {
-        background: $gray-dark-theme-dark;
-    }
 }
 
 .giz-divider-vertical {
