--- a/wwwroot/scss/theme_light_components.scss
+++ b/wwwroot/scss/theme_light_components.scss
@@ -340,3 +340,10 @@
         }
     }
 }
+
+// == divider == //
+.giz-divider {
+    [light-theme] & {
+        background: $gray-dark-theme-dark;
+    }
+}
